--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,6 @@ buildscript {
     //ext.kotlin_version = '1.2.71'
 
     repositories {
-        maven {
-            url "https://oss.sonatype.org/content/repositories/snapshots/"
-        }
-        maven {
-            url 'http://dl.bintray.com/jetbrains/intellij-plugin-service'
-        }
         mavenCentral()
         jcenter()
         google()
@@ -15,9 +9,9 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        //classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.5'
+        //classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
 }
 
