--- a/taskimpl-annotation/build.gradle
+++ b/taskimpl-annotation/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'java'
+apply plugin: 'java-library'
 
 ext {
     bintrayName = 'taskimpl-annotation'
@@ -11,6 +11,10 @@ ext {
 compileJava {
     sourceCompatibility = '1.7'
     targetCompatibility = '1.7'
+}
+
+dependencies {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
 }
 
 apply from: '../install.gradle'
