--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "test.apts.lroute"
+        applicationId "test.annotation.taskimpl"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
@@ -32,6 +32,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-//    compile project(':taskimpl-annotation')
-//    compile project(':taskimpl-compiler')
+    compile project(':taskimpl-annotation')
+    compile project(':taskimpl-compiler')
 }
