--- a/taskimpl-compiler/build.gradle
+++ b/taskimpl-compiler/build.gradle
@@ -16,7 +16,8 @@ compileJava {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':taskimpl-annotation')
-    compile  'com.squareup:javapoet:1.9.0'
+    compile 'tools.android:interface:1.1.1'
+    compile 'com.google.code.gson:gson:2.5'
 }
 
 apply from: '../install.gradle'
