--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-//apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 28
@@ -15,7 +14,20 @@ android {
                 includeCompileClasspath true
             }
         }
+
+        def taskImplService = "MainService"
+        def taskImplServiceString = "${applicationId}.${taskImplService}"
+        def taskImplserviceAction = "${applicationId}.action.${taskImplService}"
+
+        manifestPlaceholders = [
+                taskImplServiceName: "${taskImplServiceString}",
+                taskImplServiceAction: "${taskImplserviceAction}",
+        ]
+        buildConfigField("String", "MAIN_SERVICE_TAG", "\"MAIN\"")
+        buildConfigField("String", "MAIN_SERVICE_NAME", "\"${taskImplService}\"")
+        buildConfigField("String", "MAIN_SERVICE_ACTION", "\"${taskImplserviceAction}\"")
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -34,7 +46,6 @@ dependencies {
 
     compile project(':taskimpl-annotation')
     compile project(':taskimpl-compiler')
-
-    compile 'com.google.code.gson:gson:2.5'
-    compile 'tools.android:interface:1.1.1'
+//    implementation 'tools.android:taskimpl-annotation:0.0.1'
+//    implementation 'tools.android:taskimpl-compiler:0.0.1'
 }
