--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,6 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.5'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
@@ -19,5 +18,8 @@ allprojects {
     repositories {
         jcenter()
         google()
+//        maven {
+//            url 'https://dl.bintray.com/liuchonghui/maven/'
+//        }
     }
 }
