--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    compile project(':taskimpl-annotation')
-    compile project(':taskimpl-compiler')
-//    implementation 'tools.android:taskimpl-annotation:0.0.1'
-//    implementation 'tools.android:taskimpl-compiler:0.0.1'
+//    compile project(':taskimpl-annotation')
+//    compile project(':taskimpl-compiler')
+    implementation 'tools.android:taskimpl-annotation:0.0.2'
+    implementation 'tools.android:taskimpl-compiler:0.0.2'
 }
