--- a/taskimpl-compiler/build.gradle
+++ b/taskimpl-compiler/build.gradle
@@ -15,9 +15,9 @@ compileJava {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation project(':taskimpl-annotation')
-    compile 'tools.android:interface:1.1.1'
-    compile 'com.google.code.gson:gson:2.5'
+    implementation 'tools.android:taskimpl-annotation:0.0.2'
+    implementation 'tools.android:interface:1.1.1'
+    implementation 'com.google.code.gson:gson:2.5'
 }
 
 apply from: '../install.gradle'
